# teknologkoren.se-v2

./: .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.in  requirements.txt
migrations/: add_username_unique_constraint.py  contacts_join_names.py  flash_languages.py  images_are_files.py  nullable_portrait_column.py
teknologkoren_se/: factory.py  forms.py  locale.py  models.py  translations.py  util.py
teknologkoren_se/lib/: mdx_headdown.py  mdx_urlize.py
teknologkoren_se/static/css/: admin.css  style.css
teknologkoren_se/templates/: macros.html
teknologkoren_se/templates/admin/: base.html  config.html  contacts.html  edit_contact.html  event.html  file.html  files.html  frontpage.html  image.html  index.html  login.html  page.html  post.html  users.html
teknologkoren_se/templates/public/: base.html  contact.html  events.html  index.html  login.html  lucia.html  macros.html  page.html  view_post.html
teknologkoren_se/views/: admin.py  public.py
teknologkoren_se_v2/: factory.py  forms.py  locale.py  lorem_lines.txt  lorem_paragraphs.txt  models.py  translations.py
teknologkoren_se_v2/static/css/: admin.css  style.css
teknologkoren_se_v2/templates/: base.html  index.html  lucia.html  macros.html
teknologkoren_se_v2/templates/admin/: base.html  event.html  index.html  post.html
teknologkoren_se_v2/templates/public/: base.html  contact.html  events.html  index.html  macros.html  view_post.html
teknologkoren_se_v2/views/: admin.py  public.py
tests/: test_teknologkoren_se_v2.py
